     "IMAP4 IMAP4REV1 LITERAL+" may be set as the capability
     at run time if desired.
   - Fail if there are trailing command line arguments.
   - Explicitly set LDAP protocol version 
     Russell Mosemann <mose@ns.cune.edu>
   - perdition_vl has been renamed vl and is no longer global.
     The logger can be obtained using vanessa_logger_get()
     if needed.

----------------------------------------------------------------------

17th May 2002
(Horms)
   * 0.1.10
   - May log to stdout or stderr.
   - Updated debian dependancies
   - Updated man page dates
   - Handle empty map library better
   - Fixed redhat packaging

----------------------------------------------------------------------

11th May 2002
(Horms)

  * 0.1.10beta4
  - Flush internal buffers for tokeniser when switching between
    the client and the real server in unauthenticated mode.
    This resolves a problem with IMAP literal strings not working.
  - Support non-syncronising IMAP string literals as per RFC 2088
  - Correct logging of timeout
  - Add no_daemon option to perdition
  - Fixed version information in makegdbm
  - reinstall of symlinks works on Solaris 7


----------------------------------------------------------------------

30th April 2002
(Horms)

  * 0.1.10beta3
  - Uninstall symlinks created by -hook targets in various Makefile.am
  - Handle the return of an empty string from db_getserver routines
  - Minor changes to ldap module to use ldap_init as ldap_open
    is depreciated and to warn about multiple entries being
    returned. Eric <edk@ypass.net>
  - A child process, or process handling an inetd connection
    will exit on reciept of a SIG PIPE.
  - Document that if no_lookup is used then popmaps must
    not contain hostnames
  - Better logging of SSL I/O problems
  - Fixed handling of empty tags
  - Log an error and exit if TLS support is requested, as it isn't
    supported yet.
  - ldap module: If nothing resembling a servername is returned then