@@ -8,7 +8,7 @@
 # Key is either a short or long option as per perdition -h|--help, without
 # the leading - or --.  Blank lines are ignored, as is anything including
 # and after a # (hash) on a line. If a \ precedes a new line then the lines
-# will be concatenated.  if a \ precedes any other character, including a #
+# will be concatenated.  If a \ precedes any other character, including a #
 # (hash) it will be treated as a literal. Anything inside single quotes (')
 # will be treated as a litreal. Anything other than a (') inside double
 # quotes (") will be treated as a litreal. Whitespace in keys must be
